This is my first updates

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <main>
       <section id="about">
         <h2>About Me</h2>
-        <p>I am a Software developer And hardware with experience in HTML, CSS, and Python , Dart .I enjoy building responsive and user-friendly websites , Mobile apps , Robotics. [Add more about yourself!]</p>
+        <p>I am a Software developer And hardware with experience in HTML, CSS, and Python , Dart .I enjoy building responsive and user-friendly websites , Mobile apps , Robotics. and love Software</p>
       </section>
 
       <section id="skills">
